--- a/src/App.css
+++ b/src/App.css
@@ -215,3 +215,42 @@ nav ul li a:hover {
 	flex-flow: column wrap;
 	gap: 1rem;
 }
+
+.book-form label {
+	font-weight: bold;
+}
+
+.book-form select, .book-form input {
+	width: 60%;
+	height: 2rem;
+	text-align: center;
+	border: 0.1rem solid lightgrey;
+	border-radius: 0.5rem;
+	background-color: lightgrey;
+	cursor: pointer;
+}
+
+.book-form.car-submit button {
+	border: none;
+	height: 70%;
+	width: 60%;
+	border-radius: 0.5rem;
+	cursor: pointer;
+	box-shadow: 0.4rem 0.4rem 0.4rem 0 rgba(13, 187, 13, 0.2);
+	font-size: 1.2rem;
+	background-color: var(--green);
+	
+	/* browser compatibility */
+	-o-transition: 0.5s;
+	-ms-transition: 0.5s;
+	-moz-transition: 0.5s;
+	-webkit-transition: 0.5s;
+	transition: 0.5s;
+}
+
+
+.book-form.car-submit button:hover {
+	box-shadow: 0.4rem 0.4rem 0.4rem 0 rgba(20, 180, 15, 0.5);
+}
+
+
