--- a/src/App.css
+++ b/src/App.css
@@ -220,7 +220,8 @@ nav ul li a:hover {
 	font-weight: bold;
 }
 
-.book-form select, .book-form input {
+.book-form select,
+.book-form input {
 	width: 60%;
 	height: 2rem;
 	text-align: center;
@@ -239,7 +240,7 @@ nav ul li a:hover {
 	box-shadow: 0.4rem 0.4rem 0.4rem 0 rgba(13, 187, 13, 0.2);
 	font-size: 1.2rem;
 	background-color: var(--green);
-	
+
 	/* browser compatibility */
 	-o-transition: 0.5s;
 	-ms-transition: 0.5s;
@@ -248,9 +249,68 @@ nav ul li a:hover {
 	transition: 0.5s;
 }
 
-
 .book-form.car-submit button:hover {
 	box-shadow: 0.4rem 0.4rem 0.4rem 0 rgba(20, 180, 15, 0.5);
 }
 
+.modal {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	flex-flow: column;
+	z-index: 1000;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.7);
+	overflow-y: auto;
+}
 
+.modal .title-container {
+	background-color: lightgrey;
+	padding: 0.5rem;
+	display: flex;
+	gap: 20rem;
+	align-items: center;
+	justify-content: space-between;
+	border-radius: 0.5rem;
+}
+
+.modal .title-container button {
+	cursor: pointer;
+}
+
+.modal .footer {
+	background-color: lightgrey;
+	padding: 1rem;
+	display: flex;
+	justify-content: flex-end;
+	border-radius: 0.5rem;
+}
+
+#reserve-car {
+	padding: 0.5rem;
+	border: 0.1rem solid var(--green);
+	background-color: var(--green);
+	border-radius: 0.5rem;
+	font-size: 1.2rem;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+.modal .title-container button {
+	background-color: lightgrey;
+	border: none;
+	border-radius: 0.5rem;
+	font-size: 1.5rem;
+	font-weight: bold;
+}
+
+.modal-container {
+	background-color: #FFFFFF;
+	padding: 2rem;
+	border-radius: 0.5rem;
+	box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
+}
