--- a/src/App.css
+++ b/src/App.css
@@ -236,6 +236,8 @@ nav ul li a:hover {
 	box-shadow: 0.4rem 0.4rem 0.4rem 0 rgba(13, 187, 13, 0.2);
 	font-size: 1.2rem;
 	background-color: var(--green);
+	color: white;
+	font-weight: bold;
 
 	/* browser compatibility */
 	-o-transition: 0.5s;
@@ -450,3 +452,56 @@ nav ul li a:hover {
 .item-zip-code {
 	grid-area: item-zip-code;
 }
+
+.vehicle-models-container {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	margin: 2rem;
+}
+
+.vehicle-models-container h2 {
+	text-align: center;
+	font-size: 2rem;
+}
+
+.vehicle-models-container p {
+	color: #777;
+}
+
+.vehicle-models-content {
+	display: flex;
+	flex-direction: column;
+	margin-left: 2rem;
+	margin: 0.5rem 2rem;
+}
+
+.vehicle-models-buttons {
+	display: flex;
+	flex-direction: column;
+	gap: 0.7rem;
+}
+
+.vehicle-models-buttons button.picked {
+	background-color: var(--green);
+	color: white;
+}
+
+.vehicle-models-buttons button {
+	width: 100%;
+	border: none;
+	padding: 1.5rem 2.5rem;
+	background-color: #e9e9e9;
+	font-weight: bold;
+	font-size: 2rem;
+	text-align: left;
+	transition: all .5s;
+	cursor: pointer;
+}
+
+.vehicle-models-buttons button:hover {
+	background-color: var(--green);
+	color: white;
+}
+
+
