--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
 
 * {
 	font-family: "Poppins", sans-serif;
+	scrollbar-color: var(--green) white;
+	scrollbar-width: thin;
+	scroll-behavior: smooth;
 }
 
 .App {
@@ -458,6 +461,7 @@ nav ul li a:hover {
 	justify-content: center;
 	flex-direction: column;
 	margin: 2rem;
+	width: 80%;
 }
 
 .vehicle-models-container h2 {
@@ -488,14 +492,15 @@ nav ul li a:hover {
 }
 
 .vehicle-models-buttons button {
-	width: 100%;
+	width: 80%;
+	margin-left: 10%;
 	border: none;
-	padding: 1.5rem 2.5rem;
+	padding: 0.5rem 2.5rem;
 	background-color: #e9e9e9;
 	font-weight: bold;
-	font-size: 2rem;
+	font-size: 1.5rem;
 	text-align: left;
-	transition: all .5s;
+	transition: all 0.5s;
 	cursor: pointer;
 }
 
@@ -504,4 +509,60 @@ nav ul li a:hover {
 	color: white;
 }
 
+.vehicle-info {
+	display: flex;
+	justify-content: space-around;
+	flex-direction: row;
+	margin-top: 2.5rem;
+}
 
+.vehicle-info .vehicle-image-container {
+	width: 50%;
+}
+
+.vehicle-info .vehicle-image-container img {
+	width: 100%;
+	border-radius: 1rem;
+	border: 0.1rem solid black;
+}
+
+.vehicle-description-container {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.vehicle-description-container a {
+	border: none;
+	text-decoration: none;
+	font-weight: bold;
+	background-color: var(--green);
+	padding: 0.7rem;
+	border-radius: 0.5rem;
+	text-align: center;
+	color: white;
+	font-size: 1.2rem;
+	border: solid 0.15rem #706f7b;
+}
+
+.vehicle-description-item {
+	display: flex;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	border: solid 0.15rem #706f7b;
+	padding: 0.5rem;
+	border-radius: 0.5rem;
+}
+
+.vehicle-item-key {
+	font-weight: bold;
+	padding-right: 0.5rem;
+	margin-right: 0.5rem;
+	border-right: 0.15rem solid #706f7b;
+}
+
+.vehicle-description-item:nth-of-type(1) {
+	background-color: var(--green);
+	color: white;
+}
