--- a/src/App.css
+++ b/src/App.css
@@ -132,6 +132,11 @@ body {
 	box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.6);
 }
 
+nav img {
+	width: 3rem;
+	border-radius: 50%;
+}
+
 nav ul {
 	list-style-type: none;
 	display: flex;
@@ -631,6 +636,7 @@ nav ul li a:hover {
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
+	width: 70%;
 }
 
 .team-container h2 {
